Update and rename 04-Plutus-use-cases.md to 04-Plutus-use-cases.mdx

--- a/content/10-plutus/04-Plutus-use-cases.mdx
+++ b/content/10-plutus/04-Plutus-use-cases.mdx
@@ -1,4 +1,8 @@
-# Plutus use cases
+---
+title: Plutus use cases
+metaTitle: Plutus use cases
+---
+
 Typical high level use cases for Plutus implementations include, but are not restricted to:
 
 - **Oracles** – fully functional oracles that bring off-chain data on the chain to interact with and feed smart contracts, In addition, oracles create a centralized and trusted off-chain data feed for Plutus applications (for example, to interact with price feeds from various centralized exchanges).
@@ -12,5 +16,6 @@ NFTS, minting, and buying and selling NFTs – building core functionality for m
 
 - **Crypto-backed stable coins** – creating a new stable coin implementation based on chain collateral using the Atala identity system on Cardano. This can include transfer restrictions, asset freezing, as so on.
 
-## Plutus Partners Program
+## Plutus Partners program
+
 In preparation for Alonzo, we launched the Plutus Partner Program. This program summoned an all-star team of software companies to tackle smart contract programming challenges, including the above-listed use cases. The goal of the program is to enable smart contract implementations – constructed using the Plutus language – that serve as instructive examples for incoming external decentralized DApp developers. These can later serve as canonical examples for the wider Cardano community too. We will share details of these implementations soon. 
