--- a/content/10-plutus/04-Plutus-use-cases.mdx
+++ b/content/10-plutus/04-Plutus-use-cases.mdx
@@ -3,19 +3,19 @@ title: Plutus use cases
 metaTitle: Plutus use cases
 ---
 
-Typical high level use cases for Plutus implementations include, but are not restricted to:
+Typical high-level use cases for Plutus implementations include, but are not restricted to:
 
-- **Oracles** – fully functional oracles that bring off-chain data on the chain to interact with and feed smart contracts, In addition, oracles create a centralized and trusted off-chain data feed for Plutus applications (for example, to interact with price feeds from various centralized exchanges).
+- **Oracles** – fully functional oracles that bring off-chain data onto the chain to interact with and feed smart contracts. In addition, oracles create a centralized and trusted off-chain data feed for Plutus applications (for example, to interact with price feeds from various centralized exchanges).
 
-- **DEX token swaps** – creating an implementation that allows users to swap between supported tokens on a decentralized exchange. Users can create liquidity pools (or add funds to existing ones) providing coins necessary for swapping. In return, they can earn small fees for all transactions that use their funds. Users can also contribute to liquidity pools for any supported token, and therefore gain commissions in the form of exchange fees for doing so. When liquidity is provided to a pool, the user receives a liquidity token representing that deposit. The contract should calculate fees which are then dispersed to liquidity providers dependent on each provider's share of the liquidity pool.
+- **DEX token swaps** – creating an implementation that allows users to swap between supported tokens on a decentralized exchange. Users can create liquidity pools (or add funds to existing ones), providing coins necessary for swapping. In return, they can earn small fees for all transactions that use their funds. Users can also contribute to liquidity pools for any supported token and therefore gain commissions in the form of exchange fees for doing so. When liquidity is provided to a pool, the user receives a liquidity token representing that deposit. The contract should calculate fees which are then dispersed to liquidity providers dependent on each provider's share of the liquidity pool.
 
-- **Lending and borrowing** – creating a lending protocol that enables users to lend and borrow cryptocurrencies of their choice in a trustworthy way, while offering stable and variable interest rates. Users can participate as depositors or borrowers. To transact, lenders have to deposit their funds into liquidity pools, so that borrowers can borrow from such liquidity pools. Depositors receive interest-bearing tokens in return. Each pool is set aside as reserves to safeguard against volatility.
+- **Lending and borrowing** – creating a lending protocol that enables users to lend and borrow cryptocurrencies of their choice in a trustworthy way while offering stable and variable interest rates. Users can participate as depositors or borrowers. To transact, lenders have to deposit their funds into liquidity pools, so that borrowers can borrow from such liquidity pools. Depositors receive interest-bearing tokens in return. Each pool is set aside as reserves to safeguard against volatility.
 
-- **NFTS, minting, and buying and selling NFTs** – building core functionality for minting, sending, and receiving NFTs into a wallet, with other open scenarios and extensions possible.
+- **NFTs; minting, and buying and selling NFTs** – building core functionality for minting, sending, and receiving NFTs into a wallet, with other open scenarios and extensions possible.
 
-- **Decentralized finance (DeFi) tools** – creating multipurpose dashboards (either web-based or mobile), that integrate with smart contracts to bring value to native token traders. These products can have multiple functional dashboards to show balances of tokens and liquidity pools, and so on. They can also bundle together multiple functions such as swapping and providing liquidity into a single transaction, making DeFi adoption easier.
+- **Decentralized finance (DeFi) tools** – creating multipurpose dashboards (web-based or mobile) that integrate with smart contracts to bring value to native token traders. These products can have multiple functional dashboards to show balances of tokens and liquidity pools, and so on. They can also bundle together multiple functions such as swapping and providing liquidity into a single transaction, making DeFi adoption easier.
 
-- **Crypto-backed stable coins** – creating a new stable coin implementation based on chain collateral using the Atala identity system on Cardano. This can include transfer restrictions, asset freezing, as so on.
+- **Crypto-backed stable coins** – creating a new stable coin implementation based on chain collateral using the Atala identity system on Cardano. This implmentation can include transfer restrictions, asset freezing, as so on.
 
 ## Plutus Partners program
 
