--- a/content/11-community/01-cips.mdx
+++ b/content/11-community/01-cips.mdx
@@ -3,7 +3,7 @@ title: Cardano Improvement Proposals (CIPs)
 metaTitle: Cardano Improvement Proposals (CIPs)
 ---
 
-Individuals with improvement proposals for [Cardano](https://github.com/input-output-hk/cardano-documentation/pull/159) can structure those thoughts into Cardano Improvement Proposals (CIPs).  
+Individuals with improvement proposals for Cardano can structure those thoughts into Cardano Improvement Proposals (CIPs).  
 
 A *CIP* has an expected format: the proposals structure is templated to facilitate discussion and reviewing. This enables other community members to jump in and discuss specific proposals, or individual points in a proposal. The proposals and their history are also publicly available and maintained on the Cardano Foundation [CIPs' Github repository](https://github.com/cardano-foundation/CIPs).  
 
