--- a/content/02-getting-started/06-running-stake-pools-and-delegation-for-exchanges.mdx
+++ b/content/02-getting-started/06-running-stake-pools-and-delegation-for-exchanges.mdx
@@ -107,11 +107,11 @@ addresses for the delegate. The payment address is then used to pay for the
 transaction that sends the registration certificate to the chain.
 
 ```
-cardano-cli shelley stake-address key-gen \
+cardano-cli stake-address key-gen \
     --verification-key-file stake.vkey \
     --signing-key-file stake.skey
 Build the stake address:
-cardano-cli shelley stake-address build \
+cardano-cli stake-address build \
     --staking-verification-key-file stake.vkey
     --out-file stake.addr
     --mainnet
@@ -124,7 +124,7 @@ is required for payments that are used to participate in stake delegation, and
 also for depositing funds:
 
 ```
-cardano-cli shelley address key-gen \
+cardano-cli address key-gen \
     --verification-key-file pay.vkey \
     --signing-key-file pay.skey
 ```
@@ -132,7 +132,7 @@ cardano-cli shelley address key-gen \
 Build the payment address:
 
 ```
-cardano-cli shelley address build \
+cardano-cli address build \
     --payment-verification-key-file pay.vkey \
     --staking-verification-key-file stake.vkey
     --out-file pay.addr
@@ -146,7 +146,7 @@ required for participation in stake delegation. First, you will need to generate
 the stake address registration certificate using the stake verification key:
 
 ```
-cardano-cli shelley stake-address registration-certificate \
+cardano-cli stake-address registration-certificate \
 --staking-verification-key-file stake.vkey \
 --out-file stake.cert
 ```
@@ -162,19 +162,19 @@ using any payment address:
 ```
 # Get param files
 export CARDANO_NODE_SOCKET_PATH=/opt/cardano/fnf/sockets/node0.socket
-cardano-cli shelley query protocol-parameters \
+cardano-cli query protocol-parameters \
 --mainnet \
 --out-file params.json
 
 # Build
-cardano-cli shelley transaction build-raw \
+cardano-cli transaction build-raw \
 	--tx-in "$INPUT" \
 	--tx-out "${FROM}+${CHANGE}" \
 	--tx-out "${TO}+${AMOUNT}" \
-	--ttl $(expr $(CARDANO_NODE_SOCKET_PATH=/opt/cardano/fnf/sockets/node0.socket ./cardano-cli shelley query tip --mainnet | jq ".slotNo" --raw-output) + 20000) \ --fee "$FEE" \
+	--ttl $(expr $(CARDANO_NODE_SOCKET_PATH=/opt/cardano/fnf/sockets/node0.socket ./cardano-cli query tip --mainnet | jq ".slotNo" --raw-output) + 20000) \ --fee "$FEE" \
 	--tx-body-file stake-cert-tx
 # Sign
-cardano-cli shelley transaction sign \
+cardano-cli transaction sign \
     --tx-body-file stake-cert-tx \
     --signing-key-file /opt/cardano/fnf/addresses/genesis.skey \
     --signing-key-file stake.skey \
@@ -186,13 +186,13 @@ STAKE_ADDR=$( cut -c 9-  stake.addr )
 
 # Before
 export CARDANO_NODE_SOCKET_PATH=/opt/cardano/fnf/sockets/node0.socket
-cardano-cli shelley query ledger-state  --mainnet | grep "$STAKE_ADDR"
+cardano-cli query ledger-state  --mainnet | grep "$STAKE_ADDR"
 
-cardano-cli shelley transaction submit \
+cardano-cli transaction submit \
     --tx-file signed-stake-key-registration.tx \
     --mainnet
 
-cardano-cli shelley query ledger-state  --mainnet 42 | grep "$STAKE_ADDR"
+cardano-cli query ledger-state  --mainnet 42 | grep "$STAKE_ADDR"
 
 # Ready to delegate now.
 ```
@@ -204,14 +204,14 @@ pool. Note that 100% of the address’s ada will be delegated to the pool that y
 select):
 
 ```
-cardano-cli shelley stake-address delegation-certificate \
+cardano-cli stake-address delegation-certificate \
     --staking-verification-key-file stake.vkey \
     --stake-pool-verification-key-file ~/cold-keys/pool.vkey \
     --out-file pool-delegation.cert
 
 
 # Build
-cardano-cli shelley transaction build-raw \
+cardano-cli transaction build-raw \
      --tx-in "$INPUT" \
      --tx-out "$OUTPUT" \
      --ttl 500000 \
@@ -221,7 +221,7 @@ cardano-cli shelley transaction build-raw \
 
 
 # Sign
-cardano-cli shelley transaction sign \
+cardano-cli transaction sign \
     --tx-body-file pool-delegation.tx \
     --signing-key-file stake.skey \
     --signing-key-file pay.skey \
@@ -229,7 +229,7 @@ cardano-cli shelley transaction sign \
     --tx-file signed-pool-delegation.tx
 
 # Submit
-cardano-cli shelley transaction submit \
+cardano-cli transaction submit \
     --tx-file signed-pool-delegation.tx \
     --mainnet
 ```
@@ -356,7 +356,7 @@ On the cardano-node directory:
 - Generate a payment key pair (usually for generating UtxO addresses):
 
 ```
-cardano-cli shelley address key-gen \
+cardano-cli address key-gen \
   --verification-key-file payment.vkey \
   --signing-key-file payment.skey
 ```
@@ -364,7 +364,7 @@ cardano-cli shelley address key-gen \
 - Generate the KES Key pair:
 
 ```
-cardano-cli shelley node key-gen-KES \
+cardano-cli node key-gen-KES \
 --verification-key-file kes.vkey \
 --signing-key-file kes.skey
 ```
@@ -372,7 +372,7 @@ cardano-cli shelley node key-gen-KES \
 - Generate VRF Key pair
 
 ```
-cardano-cli shelley node key-gen-VRF \
+cardano-cli node key-gen-VRF \
 --verification-key-file vrf.vkey \
 --signing-key-file vrf.skey
 ```
@@ -380,7 +380,7 @@ cardano-cli shelley node key-gen-VRF \
 - Generate Cold Keys and a Cold_counter file:
 
 ```
-cardano-cli shelley node key-gen \
+cardano-cli node key-gen \
 --cold-verification-key-file cold.vkey \
 --cold-signing-key-file cold.skey \
 --operational-certificate-issue-counter
@@ -399,7 +399,7 @@ cat mainnet-shelley-genesis.json | grep KESPeriod
 Now, you can generate the operational certificate:
 
 ```
-cardano-cli shelley node issue-op-cert \
+cardano-cli node issue-op-cert \
 --kes-verification-key-file kes.vkey \
 --cold-signing-key-file cold.skey \
 --operational-certificate-issue-counter coldcounter \
@@ -421,7 +421,7 @@ following certificate delegates funds from all stake addresses associated with
 key stake.vkey to the pool.vkey.
 
 ```
-cardano-cli shelley stake-address delegation-certificate \
+cardano-cli stake-address delegation-certificate \
     --staking-verification-key-file staking.vkey \
     --stake-pool-verification-key-file ~/cold-keys/pool.vkey \
     --out-file owner-delegation.cert
