--- a/content/13-glossary.mdx
+++ b/content/13-glossary.mdx
@@ -90,6 +90,10 @@ is recommended for new users to start with.
 
 decentralized application.
 
+## datum
+
+a piece of information that can be associated with a UTXO and is used to carry script state such as its owner or the timing details of when the UTXO can be spent.
+
 ## DeFi
 
   decentralized finance refers to financial instruments and mechanisms built on the blockchain using smart contracts. Examples include atomic loans, swaps, bonding curves, and escrow.
@@ -225,6 +229,10 @@ more sense over a longer period of time.
 a Turing-complete programming platform for writing functional smart contracts on
 the Cardano blockchain. Plutus is based on the Haskell programming language.
 
+## Plutus script
+
+an executable program used in the ledger to perform additional (phase two) transaction validation. 
+
 ## produced blocks
 
 the number of blocks that have been produced by a stake pool in the current
@@ -251,6 +259,10 @@ to determine the participant’s power in the system for maintaining the ledger.
 a term used for consensus reaching methods. For instance, Ouroboros protocol,
 OBFT protocol.
 
+## redeemer
+
+a piece of information that can be associated with a UTXO and attached to the input transaction to unlock funds from a script.
+
 ## reward
 
 an amount contained in each new block that is paid out to the stakeholder by the
@@ -273,6 +285,10 @@ delegators to delegate to different stake pools, and operators to set up
 alternative pools so that they can continue earning maximum rewards. Saturation,
 therefore, exists to preserve the interests of both ada holders delegating their
 stake and stake pool operators.
+
+## script context
+
+a summary of the transaction, which is also needed in the Plutus script to validate the transaction.
 
 ## securitization
 
