--- a/content/10-plutus/01-learn-about-plutus.mdx
+++ b/content/10-plutus/01-learn-about-plutus.mdx
@@ -5,9 +5,9 @@ metaTitle: Learn about Plutus
 
 Plutus is the native smart contract language for Cardano. It is a Turing-complete language written in Haskell, and Plutus smart contracts are effectively Haskell programs. By using Plutus, you can be confident in the correct execution of your smart contracts. It draws from modern language research to provide a safe, full-stack programming environment based on Haskell, the leading purely-functional programming language.
 
-[Alonzo](https://iohk.io/en/blog/posts/2021/04/08/smart-contracts-%E2%80%93-here-we-come/) is the name of the protocol upgrade that will introduce the support for Plutus smart contracts on Cardano. This is currently in the final stages of development and we are working on lots of new content to help users on board with Plutus. Instructional material will be published here when Alonzo is released.
+The Alonzo upgrade brings exciting and highly anticipated capabilities to Cardano through the integration of Plutus scripts onto the blockchain. These now enable the implementation of smart contracts on Cardano, enabling a host of new use cases for decentralized applications (DApps) for the very first time.
 
-In the meantime, you can try out the [Plutus Playground](https://playground.plutus.iohkdev.io/) to learn how to write Plutus programs and use the [tutorials](https://plutus.readthedocs.io/en/latest/plutus/tutorials/index.html) to assist you. You can also read the [Plutus explainers](https://plutus.readthedocs.io/en/latest/plutus/explanations/index.html) to learn more about the Plutus language.
+If you want to get started, visit the [Plutus Playground](https://playground.plutus.iohkdev.io/) to learn how to write Plutus programs and use the [tutorials](https://plutus.readthedocs.io/en/latest/plutus/tutorials/index.html) and to assist you. You should also read the explainers and tutorials provided here and refer to the [Plutus explanations](https://plutus.readthedocs.io/en/latest/plutus/explanations/index.html) to learn more about the Plutus language itself.
 
 ## Plutus smart contracts
 Plutus smart contracts consist of parts that run on the blockchain (on-chain code) and parts that run on a user’s machine (off-chain or client code). Off-chain code can be written using the Plutus Application Framework (PAF), and this code is then compiled by the GHC (Glasgow Haskell Compiler), whereas on-chain code is compiled by the Plutus compiler into Plutus Core. 
