--- a/content/05-explore-cardano/05-fee-structure.mdx
+++ b/content/05-explore-cardano/05-fee-structure.mdx
@@ -3,7 +3,7 @@ title: Cardano fee structure
 metaTitle: Cardano fee structure
 ---
 
-Cardano uses a transaction fee system that covers the processing and long term
+[Cardano](https://cardano.org/) uses a transaction fee system that covers the processing and long term
 storage cost of transactions.
 
 The Cardano environment is unique in the way it handles fees, as fees do not go
@@ -11,7 +11,7 @@ directly to the block producer. Instead, they are pooled and then distributed to
 all pools that created blocks during an epoch.
 
 There currently are no fees for the memory cost of tracking the accumulated
-chain state, in particular UTxO.
+chain state, in particular UTXO.
 
 # Preventing economic attacks
 
