new glossary term

--- a/content/13-glossary.mdx
+++ b/content/13-glossary.mdx
@@ -103,6 +103,9 @@ a piece of information that can be associated with a UTXO and is used to carry s
 the process by which ada owners can participate in the network and earn rewards
 by [delegating the stake](https://docs.cardano.org/new-to-cardano/how-to-delegate) associated with their ada holdings to a stake pool.
 
+## determinism
+a measure of the predictibility of transaction processing that enables the user to forecast the impact and outcome of a transaction locally (off-chain). It provides the ability to guarantee the cost of transaction execution and how the transaction behaves on the ledger *before* it is submitted and executed on-chain. 
+
 ## DEX
 
 a decentralized exchange that facilitates peer-to-peer (P2P) cryptocurrency transactions.
