--- a/content/10-plutus/01-learn-about-plutus.mdx
+++ b/content/10-plutus/01-learn-about-plutus.mdx
@@ -5,7 +5,7 @@ metaTitle: Learn about Plutus
 
 Plutus is the native smart contract language for Cardano. It is a Turing-complete language written in Haskell, and Plutus smart contracts are effectively Haskell programs. By using Plutus, you can be confident in the correct execution of your smart contracts. It draws from modern language research to provide a safe, full-stack programming environment based on Haskell, the leading purely-functional programming language.
 
-The Alonzo upgrade brings exciting and highly anticipated capabilities to Cardano through the integration of Plutus scripts onto the blockchain. These now enable the implementation of smart contracts on Cardano, enabling a host of new use cases for decentralized applications (DApps) for the very first time.
+The Alonzo upgrade brings exciting and highly anticipated capabilities to Cardano through the integration of Plutus scripts onto the blockchain. These scripts now enable the implementation of smart contracts on Cardano, enabling a host of new use cases for decentralized applications (DApps) for the very first time.
 
 If you want to get started, visit the [Plutus Playground](https://playground.plutus.iohkdev.io/) to learn how to write Plutus programs and use the [tutorials](https://plutus.readthedocs.io/en/latest/plutus/tutorials/index.html) and to assist you. You should also read the explainers and tutorials provided here and refer to the [Plutus explanations](https://plutus.readthedocs.io/en/latest/plutus/explanations/index.html) to learn more about the Plutus language itself.
 
