--- a/content/05-explore-cardano/02-cardano-architecture/03-cardano-db-sync-best-practices.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture/03-cardano-db-sync-best-practices.mdx
@@ -29,15 +29,15 @@ For details of sample queries, see
 
 **System requirements**
 
-The system requirements for cardano-db-sync (with both db-sync and the node running on the same machine are:
-Any of the big, well-known Linux distributions (e.g. Debian, Ubuntu, RHEL, CentOS, Arch, etc.)
-16 Gigabytes of RAM.
-4 CPU cores.
-80 Gigabytes or more of disk storage (preferably SSD, which are 2-5 times faster than electro-mechanical disks).
+The system requirements for cardano-db-sync (with both db-sync and the node running on the same machine) are:
+- Any of the big, well-known Linux distributions (e.g. Debian, Ubuntu, RHEL, CentOS, Arch, etc.)
+- 16 Gigabytes of RAM.
+- 4 CPU cores.
+- 80 Gigabytes or more of disk storage (preferably SSD, which are 2-5 times faster than electro-mechanical disks).
+
 The recommended configuration is to have the db-sync and the PostgreSQL server on the same machine. During syncing (getting historical data from the blockchain), there is a huge amount of data traffic between db-sync and the database. Traffic to a local database is significantly faster than traffic to a database on the LAN or remotely to another location.
 
-To run Cardano DB Sync, you first need to run a full Cardano node.  
-For more information, see the [building and running instructions](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/building-running.md).
+To run Cardano DB Sync, you first need to run a full Cardano node. For more information, see the [building and running instructions](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/building-running.md).
 
 
 **Sample Cardano DB Sync queries**
