updating Marlowe pg links

--- a/content/08-marlowe/01-learn-about-marlowe.mdx
+++ b/content/08-marlowe/01-learn-about-marlowe.mdx
@@ -29,7 +29,7 @@ When a contract is run, the roles involved are fulfilled by participants, which 
 
 ### How can I use the Marlowe Playground?
 
-The [Marlowe Playground](https://alpha.marlowe.iohkdev.io/) is available to develop, simulate, and test the process of writing smart contracts in a sandbox environment. Its purpose is to encourage all types of developers, even if you don’t have prior Haskell or Javascript experience, to build financial products on Cardano. A set of [tutorials](https://alpha.marlowe.iohkdev.io/doc/marlowe/tutorials/index.html) is available. These outline example contracts and overview information on Marlowe and how contracts should be modelled. 
+The [Marlowe Playground](https://play.marlowe-finance.io) is available to develop, simulate, and test the process of writing smart contracts in a sandbox environment. Its purpose is to encourage all types of developers, even if you don’t have prior Haskell or Javascript experience, to build financial products on Cardano. A set of [tutorials](https://alpha.marlowe.iohkdev.io/doc/marlowe/tutorials/index.html) is available. These outline example contracts and overview information on Marlowe and how contracts should be modelled. 
 
 The Marlowe Playground is the medium for end-to-end financial smart contract development. It provides a means for developers to not only write smart contract code, but to also perform preliminary iterative design using simulations, ability to formally verify, and ability to test smart contracts. These capabilities, paired with a purpose-built DSL for finance, ensures that the contracts are easy and straightforward to build, and that they are secure, verifiable, and rigorously tested.
 
