--- a/content/08-marlowe/05-writing-marlowe-with-blockly.mdx
+++ b/content/08-marlowe/05-writing-marlowe-with-blockly.mdx
@@ -7,7 +7,7 @@ You can write Marlowe code directly as Marlowe text, or alternatively use the Bl
 
 To use Blockly follow these steps:
 
-1. Open the [Marlowe Playground](https://alpha.marlowe.iohkdev.io/#/).
+1. Open the [Marlowe Playground](https://play.marlowe-finance.io/#/).
 
     You will see a window like this:
     
