--- a/content/08-marlowe/07-using-javascript-editor.mdx
+++ b/content/08-marlowe/07-using-javascript-editor.mdx
@@ -7,7 +7,7 @@ You can use the embedded JavaScript editor to write Marlowe code.
 
 To use the editor follow these steps:
 
-1. Open the Marlowe Playground.
+1. Open the [Marlowe Playground](https://play.marlowe-finance.io/#/).
 
 2. Click **Start coding!** and select **Javascript** from the menu.
 
@@ -25,4 +25,4 @@ To use the editor follow these steps:
 
 6. Then click **Send to Simulator** in the top right-hand corner. 
 
-    You can also find more details about simulation in the [Marlowe tutorial](https://alpha.marlowe.iohkdev.io/doc/marlowe/tutorials/javascript-embedding.html). 
+    You can also find more details about simulation in the [Marlowe tutorial](https://play.marlowe-finance.io/doc/marlowe/tutorials/javascript-embedding.html). 
