--- a/content/08-marlowe/06-using-the-haskell-editor.mdx
+++ b/content/08-marlowe/06-using-the-haskell-editor.mdx
@@ -7,7 +7,7 @@ As an experienced Haskell developer you can use the Haskell editor to render Mar
 
 To use the Haskell editor follow these steps:
 
-1. Open the [Marlowe Playground](https://alpha.marlowe.iohkdev.io/#/).
+1. Open the [Marlowe Playground](https://play.marlowe-finance.io).
 
 2. Click **Start coding!** 
 
@@ -31,4 +31,4 @@ To use the Haskell editor follow these steps:
 
 7. Then, click **Send to Simulator**. 
 
-   The Simulator allows you to simulate Marlowe contracts transaction by transaction. You can find more instructions on how to use the Haskell editor in the [Marlowe tutorial](https://alpha.marlowe.iohkdev.io/doc/marlowe/tutorials/embedded-marlowe.html).
+   The Simulator allows you to simulate Marlowe contracts transaction by transaction. You can find more instructions on how to use the Haskell editor in the [Marlowe tutorial](https://play.marlowe-finance.io/doc/marlowe/tutorials/embedded-marlowe.html).
