--- a/content/11-community/07-Cardano-stack-exchange.mdx
+++ b/content/11-community/07-Cardano-stack-exchange.mdx
@@ -3,4 +3,4 @@ title: Cardano Stack Exchange
 metaTitle: Cardano Stack Exchange
 ---
 
-[Cardano Stack Exchange](https://cardano.stackexchange.com/) is a question and answer site for users and developers of the [Cardano](https://cardano.org/) ecosystem. Come and join us!
+[Cardano Stack Exchange](https://cardano.stackexchange.com/) is a question-and-answer site for users and developers of the [Cardano](https://cardano.org/) ecosystem. Come and join us!
