--- a/content/11-community/05-getting-support.mdx
+++ b/content/11-community/05-getting-support.mdx
@@ -25,4 +25,4 @@ You can reach the developers in the Cardano community using these:
 
 To contact IOHK Technical Support, please submit a request using the [Submit a request form](https://iohk.zendesk.com/hc/en-us/requests/new). On that page you can also click the Support button at the bottom right of your screen. The request form is better if you have a lot to write.
 
-To use Community Technical Support, you can visit [Cardano Forums](https://forum.cardano.org/c/english/communitytechnicalsupport) , [Stack Exchange](https://cardano.stackexchange.com/) or [Telegram channel](https://t.me/CardanoCommunityTechSupport).
+To use Community Technical Support, you can visit [Cardano Forums](https://forum.cardano.org/c/english/communitytechnicalsupport), [Stack Exchange](https://cardano.stackexchange.com/), or [Telegram channel](https://t.me/CardanoCommunityTechSupport).
