--- a/content/11-community/02-providing-feedback.mdx
+++ b/content/11-community/02-providing-feedback.mdx
@@ -2,8 +2,7 @@
 title: Providing feedback
 metaTitle: Providing feedback
 ---
-)
-User feedback is an invaluable and critical aspect of [Cardano](https://github.com/input-output-hk/cardano-documentation/pull/160) . Regardless of
+User feedback is an invaluable and critical aspect of [Cardano](https://cardano.org/). Regardless of
 your experience level, we want to hear about any bugs or usability issues you
 encounter, or any suggestions for improvement you may have.
 
