--- a/content/10-plutus/11-transaction-costs-determinism.mdx
+++ b/content/10-plutus/11-transaction-costs-determinism.mdx
@@ -3,11 +3,11 @@ title: Transaction costs and determinism
 metaTitle: Transaction costs and determinism
 ---
 
-Cardano’s approach to price setting mainly relies on market demand over actual supply. With the recent launch of smart contracts on Cardano, there will be more than one type of demand competing for the common supply. Thus, it is crucial to consider both relative and absolute pricing. One way to do this is to inspect the effects of smart contract pricing, non-fungible token (NFT) operations, and so on, with respect to some common value – in our case, the consumption of Cardano’s processing power. 
+[Cardano](https://cardano.org/)’s approach to price setting mainly relies on market demand over actual supply. With the recent launch of smart contracts, there will be more than one type of demand competing for the common supply. Thus, it is crucial to consider both *relative* and *absolute* pricing. One way to do this is to inspect the effects of smart contract pricing, non-fungible token (NFT) operations, and so on, with respect to some common value – in our case, the consumption of Cardano’s processing power. 
 
-The Cardano ledger has been designed with a focus on high assurance, security, and proven formal verification. In alignment with this strategy, it is also important to ensure that transaction processing is *deterministic*, meaning that a user can predict its impact and outcome before the actual execution of that transaction.
+The Cardano ledger's design is focused on high assurance, security, and proven formal verification. In alignment with this strategy, it is also important to ensure that transaction processing is *deterministic*, meaning that a user can predict the impact and outcome of a transaction before its actual execution.
 
-The ability to guarantee the cost of transaction execution and how the transaction behaves on the ledger *before* it is submitted, becomes even more prominent with the introduction of smart contract support. This feature is different from other blockchains, including Ethereum, where other network activity can influence the gas cost. This ability is also guaranteed by the deterministic nature of Cardano and Plutus scripts. 
+The ability to guarantee the cost of transaction execution and how the transaction behaves on the ledger *before* it is submitted, becomes even more prominent with the introduction of smart contract support. This feature is different from other blockchains, including Ethereum, where other network activity can influence the gas cost. This ability is also guaranteed by the deterministic nature of Cardano and [Plutus scripts](https://docs.cardano.org/plutus/Plutus-validator-scripts). 
 
 *Determinism*, in the context of transaction and script processing, is a synonym for predictability. This means that a user can predict locally (off-chain) how their transaction will impact the on-chain state of the ledger, without encountering the following:
 - unexpected script validation outcomes or failures
